# owaroma

./: CMakeLists.txt  LICENSE  README.md  stm32_toolchain.cmake
include/: owaroma_control.h  owaroma_gpio_driver.h  owaroma_timer_driver.h  owaroma_uart_driver.h
src/: main.c  owaroma_control.c  owaroma_control_private.h  owaroma_gpio_driver.c  owaroma_gpio_private.h  owaroma_timer_driver.c  owaroma_uart_driver.c  owaroma_uart_private.h
